// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Report Responsive Line Custom Tick Test renders correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      transform="translate(undefined,NaN)"
    >
      <text
        class="helio-responsive-tick"
        dominant-baseline="middle"
        text-anchor="middle"
      >
        Invalid Date
      </text>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Report Responsive Line Custom Tick Test renders date if isTime != true 1`] = `
<DocumentFragment>
  <svg>
    <g
      transform="translate(undefined,NaN)"
    >
      <text
        class="helio-responsive-tick"
        dominant-baseline="middle"
        text-anchor="middle"
      >
        9 PM
      </text>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Report Responsive Line Custom Tick Test renders time if isTime == true 1`] = `
<DocumentFragment>
  <svg>
    <g
      transform="translate(undefined,NaN)"
    >
      <text
        class="helio-responsive-tick"
        dominant-baseline="middle"
        text-anchor="middle"
      >
        Invalid Date
      </text>
    </g>
  </svg>
</DocumentFragment>
`;
